# mc-data-sync

./: README.md
.github/workflows/: client.yml  client_publish.yml  ghcr.yml  ingress_discord.yml  server.yml
datasync-minecraft/: LICENSE.md  build.gradle  build.gradle.kts  fabric-legacy.gradle.kts  fabric.gradle.kts  gradle.properties  settings.gradle  settings.gradle.kts  stonecutter.gradle  stonecutter.gradle.kts
datasync-minecraft/src/main/java/dev/upcraft/datasync/: DataSyncMod.java
datasync-minecraft/src/main/java/dev/upcraft/datasync/api/: DataSyncAPI.java  SyncToken.java
datasync-minecraft/src/main/java/dev/upcraft/datasync/api/ext/: DataSyncPlayerExt.java
datasync-minecraft/src/main/java/dev/upcraft/datasync/api/util/: Entitlements.java  GameProfileHelper.java
datasync-minecraft/src/main/java/dev/upcraft/datasync/client/: DataSyncModClient.java  Session.java  SessionStore.java
datasync-minecraft/src/main/java/dev/upcraft/datasync/content/: DataRegistry.java  DataStore.java  DataType.java  StoredDataHolder.java
datasync-minecraft/src/main/java/dev/upcraft/datasync/mixin/: MinecraftMixin.java  PlayerMixin.java
datasync-minecraft/src/main/java/dev/upcraft/datasync/net/: C2SUpdatePlayerDataPacket.java  S2CUpdatePlayerDataPacket.java
datasync-minecraft/src/main/java/dev/upcraft/datasync/util/: EntitlementsImpl.java  ModHelper.java
datasync-minecraft/src/main/java/dev/upcraft/datasync/web/: HttpUtil.java
datasync-minecraft/src/main/resources/: datasync_minecraft.mixins.json  fabric.mod.json
datasync-minecraft/src/testmod/java/dev/upcraft/datasync/testmod/: SupporterData.java  Testmod.java  TestmodClient.java
datasync-minecraft/src/testmod/resources/: fabric.mod.json
datasync-minecraft/versions/1.19.2-fabric/: gradle.properties
datasync-minecraft/versions/1.19.2-fabric/src/main/java/dev/upcraft/datasync/net/: S2CUpdatePlayerDataPacket.java
datasync-minecraft/versions/1.20.1-fabric/: gradle.properties
datasync-minecraft/versions/1.20.1-fabric/src/main/java/dev/upcraft/datasync/net/: C2SUpdatePlayerDataPacket.java  S2CUpdatePlayerDataPacket.java
datasync-minecraft/versions/1.21.1-fabric/: gradle.properties
datasync-minecraft/versions/1.21.1-fabric/src/main/java/dev/upcraft/datasync/net/: C2SUpdatePlayerDataPacket.java  S2CUpdatePlayerDataPacket.java
datasync-minecraft/versions/1.21.4-fabric/: gradle.properties
datasync-minecraft/versions/1.21.4-fabric/src/main/java/dev/upcraft/datasync/net/: S2CUpdatePlayerDataPacket.java
datasync-minecraft/versions/1.21.9-fabric/: gradle.properties
datasync-minecraft/versions/1.21.9-fabric/src/main/java/dev/upcraft/datasync/net/: C2SUpdatePlayerDataPacket.java  S2CUpdatePlayerDataPacket.java
datasync-minecraft/versions/26.1-fabric/: gradle.properties
datasync-minecraft/versions/26.1-fabric/src/main/java/dev/upcraft/datasync/net/: C2SUpdatePlayerDataPacket.java  S2CUpdatePlayerDataPacket.java
datasync-server/: .gitignore  Dockerfile  package-lock.json  package.json
datasync-server/docker/: entrypoint.sh
datasync-server/prisma/: schema.prisma
datasync-server/prisma/migrations/20241016070156_init/: migration.sql
datasync-server/prisma/migrations/20241016070648_entitlement_link/: migration.sql
datasync-server/prisma/migrations/20241016101442_sessions/: migration.sql
datasync-server/src/: hooks.server.ts
datasync-server/src/lib/: index.ts  minecraft.ts  util.ts
datasync-server/src/lib/server/: auth.ts
datasync-server/src/params/: resourcepath.ts
datasync-server/src/routes/: +server.ts
datasync-server/src/routes/api/auth/mojang/: +server.ts
datasync-server/src/routes/api/auth/mojang/challenge/: +server.ts
datasync-server/src/routes/api/v0/(api-key)/entitlements/: +server.ts
datasync-server/src/routes/api/v0/(api-key)/users/add-entitlements/: +server.ts
datasync-server/src/routes/api/v0/(api-key)/users/remove-entitlements/: +server.ts
datasync-server/src/routes/api/v0/data/[uuid]/[namespace]/[...path=resourcepath]/: +server.ts
ingress_discord/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.rs
ingress_discord/migrations/2024-10-17-134026_create_users/: down.sql  up.sql
ingress_discord/migrations/2024-10-19-163034_role_mappings/: down.sql  up.sql
ingress_discord/migrations/2024-11-17-110303_minecraft_users/: down.sql  up.sql
ingress_discord/src/: discord.rs  lib.rs  models.rs  schema.rs  util.rs
ingress_discord/src/discord/: commands.rs  members.rs  register.rs
ingress_discord/src/discord/commands/: add_role_mapping.rs  link.rs  reload.rs
ingress_discord/src/util/: config.rs  db.rs  http.rs  identifier.rs
ingress_discord/src/web/: api.rs  server.rs
