[package]
name = "ingress_discord"
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.91"
chrono = { version = "0.4.38", features = ["serde"] }
dotenvy = "0.15.7"
log = { version = "0.4.22", features = ["serde"] }
rusty_interaction = { version = "0.3.0", features = ["handler", "rustls"] }
serde = { version = "1.0.213", features = ["derive"] }
thiserror = "1.0.65"
tokio = { version = "1.41.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["log", "english", "tracing-subscriber"] }
env_logger = "0.11.5"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "json"] }
once_cell = "1.20.2"
reqwest = { version = "0.12.8", default-features = false, features = ["json", "rustls-tls"] }
diesel = { version = "2.2.4", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "serde_json", "r2d2"] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
futures = "0.3.31"
serde_json = "1.0.132"
uuid = { version = "1.11.0", features = ["v4"] }
actix-web = { version = "4.9.0", features = ["rustls"] }
r2d2 = "0.8.10"
regex = "1.11.1"
lazy_static = "1.5.0"

[patch.crates-io]
#rusty_interaction = { git = "https://github.com/showengineer/rusty-interaction.git", rev = "32281f85fa94aaa71a9a331dc33fbd2860895aea" }
rusty_interaction = { git = "https://github.com/UpcraftLP/rusty-interaction.git", rev = "1d2ab68141db88757664366a5ffc2c1c2b777668" }

[build-dependencies]
built = { version = "0.7.5", features = ["chrono", "git2", "semver"] }
