[package]
name = "ingress_discord"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
rusty_interaction = { version = "0.3.0", features = ["handler", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
tokio = { version = "1.41.1", features = ["full"] }
tokio-cron-scheduler = { version = "0.15.1", features = ["english", "tracing-subscriber"] }
tracing-subscriber = { version = "0.3.20", features = ["chrono", "env-filter", "json"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls-native-roots"] }
diesel = { version = "2.3.3", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "chrono", "serde_json", "r2d2"] }
diesel_migrations = { version = "2.3.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
futures = "0.3.31"
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4"] }
actix-web = { version = "4.12.0", features = ["rustls"] }
r2d2 = "0.8.10"
regex = "1.11.2"
lazy_static = "1.5.0"
twilight-http = { version = "0.15.4", default-features = false, features = ["decompression", "rustls-webpki-roots"] }
twilight-model = "0.15.4"
itertools = "0.14.0"
tracing = { version = "0.1.41", features = ["async-await"] }

[patch.crates-io]
#rusty_interaction = { git = "https://github.com/showengineer/rusty-interaction.git", rev = "32281f85fa94aaa71a9a331dc33fbd2860895aea" }
rusty_interaction = { git = "https://github.com/UpcraftLP/rusty-interaction.git", rev = "e6847bfc773eda5215c4558de9c4215838b62afa" }

[build-dependencies]
built = { version = "0.8.0", features = ["chrono", "git2", "semver"] }
